Also minimize fullscreen windows when clicking on a task button. Document the minimization feature of task buttons and the Ctrl modifier.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -257,13 +257,15 @@ that is running on the current workspace, or all workspaces if
 C<TaskBarShowAllWindows=1>.  Each task button shows the
 application icon and the application title.  The active application is
 indicated by a pressed button.  This is the application that has input
-focus.  Pressing another button activates that application: it is
-brought to the foreground and receives input focus.  Other mouse
-controlled activities on the window buttons are: dragging window buttons
-with the left mouse button to rearrange the order, closing the application
-window with C<Alt> + middle button, lowering the application window with
-C<Ctrl> + middle button, or bringing the application window to the current
-workspace with C<Shift> + middle button if C<TaskBarShowAllWindows=1>.
+focus.  Clicking another button activates that application: it is
+brought to the foreground and receives input focus.  Clicking the button
+of an active application minimizes it.  To minimize an inactive application,
+click its button while C<Ctrl> is down.
+
+The window buttons can be dragged with the left mouse button to rearrange
+their order. A window can be closed with C<Alt> + middle button, lowered
+with C<Ctrl> + middle button, or brought to the current workspace with
+C<Shift> + middle button when C<TaskBarShowAllWindows=1>.
 
 If there are not many application buttons then a stretch of plain task
 bar is visible.  Clicking on it with the right mouse button gives the
