--- a/man/icewm-menu.pod
+++ b/man/icewm-menu.pod
@@ -15,12 +15,13 @@
 =head2 DESCRIPTION
 
 The F<menu> file is responsible for configuring most of the L<icewm(1)>
-root menu and start menu.
+root menu and the start menu.
 
-A menu of applications; usually customized by the user.  B<icewm>
-provides the L<icewm-menu-fdo(1)> program to generate a default menu.
-Similar programs are L<xdg_menu(1)>, L<mmaker(1)> (MenuMaker),
-L<xde-menu(1)>, L<xdgmenumaker(1)>.
+A menu that gives access to applications; usually customized by the user.
+The L<icewm-menu-fdo(1)> program generates a default menu
+that contains most of the systems desktop applications.
+Similar programs are L<xdg_menu(1)>, L<mmaker(1)>,
+L<xde-menu(1)> and L<xdgmenumaker(1)>.
 
 =head2 FORMAT
 
@@ -28,46 +29,46 @@ The file contains lines with the following syntax:
 
 =over
 
-=item B<prog> [B<">]I<title>[B<">] I<icon> I<program> I<options>
+=item B<prog> B<">I<title>B<"> I<icon> I<program> I<options>
 
 Specifies a program to execute when the menu item is selected.
 
-=item B<restart> [B<">]I<title>[B<">] I<icon> I<program> I<options>
+=item B<restart> B<">I<title>B<"> I<icon> I<program> I<options>
 
 Specifies a program to replace the window manager when the menu item is
 selected.  This is for launching other window managers from within
 L<icewm(1)>.
 
-=item B<runonce> [B<">]I<title>[B<">] I<icon> B<">[I<name>][B<.>I<class>]B<"> I<program> I<options>
+=item B<runonce> B<">I<title>B<"> I<icon> B<">[I<name>][B<.>I<class>]B<"> I<program> I<options>
 
 Specifies a program to execute when the menu item is selected; however,
 if a window of the specified I<name> and I<class> is present,
 the program will not be run again.
 
-=item B<menu> [B<">]I<title>[B<">] I<icon> B<{>
+=item B<menu> B<">I<title>B<"> I<icon> B<{>
  # contained items
  B<}>
 
 Specifies a sub-menu.  The lines that appear between the braces can be
 any menu item described here.
 
-=item B<menufile> [B<">]I<title>[B<">] I<icon> [B<">]I<filename>[B<">]
+=item B<menufile> B<">I<title>B<"> I<icon> B<">I<filename>B<">
 
 Specifies a file from which to collect sub-menu items (lines) and place
 them at this point in the menu.
 
-=item B<menuprog> [B<">]I<title>[B<">] I<icon> I<program> I<options>
+=item B<menuprog> B<">I<title>B<"> I<icon> I<program> I<options>
 
 Specifies a program that will print sub-menu items on standard output,
 which will be collected and placed in the sub-menu at this point.
 
-=item B<menuprogreload> [B<">]I<title>[B<">] I<icon> I<timeout>
+=item B<menuprogreload> B<">I<title>B<"> I<icon> I<timeout>
 I<program> I<options>
 
 Similar to B<menuprog>, but after at least I<timeout> seconds
 the menu is regenerated.
 
-=item B<include> [B<">]I<filename>[B<">]
+=item B<include> B<">I<filename>B<">
 
 Read additional entries from the file I<filename>
 
@@ -90,7 +91,7 @@ B<menuprog>, B<menuprogreload>, B<include>, B<includeprog>, B<separator>
 
 These are literal string keywords.
 
-=item [B<">]I<title>[B<">]
+=item B<">I<title>B<">
 
 This is the I<title> string associated with the menu item that is
 displayed in the menu.  When the I<title> contains spaces, the title
