--- a/man/icewm-keys.pod
+++ b/man/icewm-keys.pod
@@ -143,6 +143,9 @@ Following is the example F<keys> file that ships with L<icewm(1)>:
     # display and select monitor setup configurations
     switchkey "Super+p" icewm-menu-xrandr
 
+    # display and select from all terminals
+    switchkey "Super+q"     icesh -Z switchmenu
+
 Following shows how to add mouse button bindings on the root window to
 change the current workspace rolling the mouse wheel on the desktop:
 
